# CPP-Calculator

./: .gitignore  LICENSE  README.md
binary/: Calculator  Template
scripts/: cninja.sh  debug-build-run.sh  debug-build.sh  gitgud.sh  installation.sh  source-tree.sh
source/: CMakeLists.txt  main.cpp  shared.cpp  shared.hpp
source/cpp-version-test/: CMakeLists.txt
source/cpp-version-test/cpp2017/: test-cpp17.cpp  test-cpp17.hpp
source/cpp-version-test/cpp2020/: test-cpp20.cpp  test-cpp20.hpp
source/equation-solution/: CMakeLists.txt  solve-step-by-step.cpp  solve.hpp
source/equation-standard/: CMakeLists.txt  equation-check.cpp  equation-fix.cpp  equation.hpp
source/file-stream/: CMakeLists.txt  utils.cpp  utils.hpp
source/gui/: CMakeLists.txt  config-utilities.cpp  config-utilities.hpp  config-window.cpp  config-window.hpp  config-window.ui  config.json  confirmation-dialog.cpp  confirmation-dialog.hpp  confirmation-dialog.ui  main-window.cpp  main-window.hpp  main-window.ui
